--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
          </section>
 
          <!-- About -->
-         <section class="about section" id="about">
+         <section class="about" id="about">
             <h2 class="section_title">About Me</h2>
 
             <div class="about_container container">
@@ -97,7 +97,7 @@
          </section>
 
          <!-- Skill -->
-         <section class="skill section" id="skill">
+         <section class="skill" id="skill">
             <h2 class="section_title">Skills</h2>
 
             <div class="skill_container container">
@@ -145,7 +145,7 @@
          </section>
 
          <!-- Portfolio -->
-         <section class="portfolio section" id="portfolio">
+         <section class="portfolio" id="portfolio">
             <h2 class="section_title">Portfolio</h2>
 
             <div class="portfolio_container container">
@@ -195,7 +195,7 @@
          </section>
 
          <!-- Contact -->
-         <section class="contact section" id="contact">
+         <section class="contact" id="contact">
             <h2 class="section_title">Contact</h2>
 
             <div class="contact_container container">
@@ -232,7 +232,7 @@
       </main>
 
       <!-- Footer -->
-      <footer class="footer section">
+      <footer class="footer">
          <div class="footer_container container">
             <div class="footer_data">
                <h2 class="footer_title">FARIDZ WAHYU ARDLI MAULANA</h2>
