--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <header class="header">
          <nav class="nav container">
             <div>
-               <a href="#" class="logo_nav">Faridz Wahyu</a>
+               <a href="#" class="logo_nav">Faridz</a>
             </div>
 
             <div class="menu_nav">
