Change about me

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                <h1 class="home_title"><span>HE</span><br />LLO.</h1>
 
                <div class="home_scroll">
-                  <a href="#about" class="home_scroll_link"><i class="bx bx-up-arrow-alt"></i>Next</a>
+                  <a href="#about" class="home_scroll_link"><i class="bx bx-up-arrow-alt"></i>About me</a>
                </div>
 
                <img src="img/profil.png" class="home_img" />
@@ -83,15 +83,18 @@
                </div>
 
                <div>
-                  <h2 class="about_subtitle">I'm Faridz Wahyu</h2>
+                  <h2 class="about_subtitle">I'm Faridz Wahyu Ardli Maulana</h2>
                   <span class="about_profession">Web Developer</span>
-                  <p class="about_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium minus necessitatibus nihil perspiciatis totam possimus harum praesentium a atque exercitationem?</p>
+                  <p class="about_text">
+                     Love the IT since 2014. And in 2017 choose to focus on web development. Have completed several simple front-end and back-end projects. In addition to the native language, also familiar with using the framework, like
+                     Bootstrap and CodeIgniter. Git and GitHub are certainly very helpful.
+                  </p>
                </div>
 
                <div class="about_social">
-                  <a href="#" class="about_social_icon"><i class="bx bxl-linkedin"></i></a>
+                  <a href="#" class="about_social_icon"><i class="bx bxl-facebook-square"></i></a>
                   <a href="#" class="about_social_icon"><i class="bx bxl-github"></i></a>
-                  <a href="#" class="about_social_icon"><i class="bx bxl-dribbble"></i></a>
+                  <a href="#" class="about_social_icon"><i class="bx bxl-instagram"></i></a>
                </div>
             </div>
          </section>
